Initial infinite-scroll commit, designed responsive title, implemented initial Unsplash API grab

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinite Scroll</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=roskiecruz.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
+    <!-- Title -->
+    <div class="title">
+        <h1><span class="title__brand">Unsplash</span> API<span class="title__break"></br></span><span class="title__separator"> — </span><span class="title__app">Infinite Scroll</span></h1>
+    </div>
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="public/img/loader.svg" alt="Loading">
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+    </div>
     <!-- Script -->
     <script src="/public/js/script.js"></script>
 </body>
