--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1><span class="title__brand">Unsplash</span> API<span class="title__break"></br></span><span class="title__separator"> — </span><span class="title__app">Infinite Scroll</span></h1>
     </div>
     <!-- Loader -->
-    <div class="loader" id="loader">
+    <div class="loader" id="loader" hidden>
         <img src="public/img/loader.svg" alt="Loading">
     </div>
     <!-- Image Container -->
