--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Infinite Scroll</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=roskiecruz.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <!-- Title -->
@@ -21,6 +21,6 @@
     <div class="image-container" id="image-container">
     </div>
     <!-- Script -->
-    <script src="/public/js/script.js"></script>
+    <script src="public/js/script.js"></script>
 </body>
 </html>
